5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4183/executions/1630_2921.log
== TEST (2019-04-02 17:12:52) 
-- CODE:
precoJogo1 = float(input('valor do jogo 1'))
precoJogo2 = float(input('valor do jogo 2'))
TotalJogo2 = precoJogo2 - (precoJogo2*(desconto25 / 100))
print(round(TotalJogo2,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    TotalJogo2 = precoJogo2 - (precoJogo2*(desconto25 / 100))
NameError: name 'desconto25' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:12:53) 
-- CODE:
precoJogo1 = float(input('valor do jogo 1'))
precoJogo2 = float(input('valor do jogo 2'))
TotalJogo2 = precoJogo2 - (precoJogo2*(desconto25 / 100))
print(round(TotalJogo2,2))

-- EXECUTION TIME:
0.140177
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2921/main.py", line 3, in <module>
    TotalJogo2 = precoJogo2 - (precoJogo2*(desconto25 / 100))
NameError: name 'desconto25' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:13:13) 
-- CODE:
precoJogo1 = float(input('valor do jogo 1'))
precoJogo2 = float(input('valor do jogo 2'))
TotalJogo2 = precoJogo2 - (precoJogo2*(25 / 100))
print(round(TotalJogo2,2))

-- EXECUTION TIME:
0.192271
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.94
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:13:51) 
-- CODE:
precoJogo1 = float(int(input('valor do jogo 1')))
precoJogo2 = float(int(input('valor do jogo 2')))
TotalJogo2 = precoJogo2 - (precoJogo2*(25 / 100))
print(round(TotalJogo2,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precoJogo1 = float(int(input()))
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:13:54) 
-- CODE:
precoJogo1 = float(int(input('valor do jogo 1')))
precoJogo2 = float(int(input('valor do jogo 2')))
TotalJogo2 = precoJogo2 - (precoJogo2*(25 / 100))
print(round(TotalJogo2,2))

-- EXECUTION TIME:
0.13678
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2921/main.py", line 1, in <module>
    precoJogo1 = float(int(input()))
ValueError: invalid literal for int() with base 10: '142.35'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:15:53) 
-- CODE:
precoJogo1 = float(int(input('valor do jogo 1')))
precoJogo2 = float(int(input('valor do jogo 2')))
desconto25 = precoJogo2*25/100
TotalJogo2 = precoJogo2 - (precoJogo2*(desconto25 / 100))
print(round(TotalJogo2,2))

-- EXECUTION TIME:
0.20675
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2921/main.py", line 1, in <module>
    precoJogo1 = float(int(input()))
ValueError: invalid literal for int() with base 10: '142.35'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:18:09) 
-- CODE:
precoJogo1 = float(int(input('valor do jogo 1')))
precoJogo2 = float(int(input('valor do jogo 2')))
desconto25 = precoJogo1*25/100
TotalJogo2 = precoJogo2 - (precoJogo2*(desconto25 / 100))
print(round(TotalJogo2,2))

-- EXECUTION TIME:
0.123413
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2921/main.py", line 1, in <module>
    precoJogo1 = float(int(input()))
ValueError: invalid literal for int() with base 10: '142.35'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:19:53) 
-- CODE:
precoJogo1 = float(int(input('valor do jogo 1')))
precoJogo2 = float(int(input('valor do jogo 2')))
desconto25 = precoJogo1*25/100
TotalJogo2 = precoJogo2 - (precoJogo2*(desconto25 / 100))
Total = precoJogo1 + TotalJogo2
print(round(TotalJogo2,2))
print(Total)

-- EXECUTION TIME:
0.184556
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2921/main.py", line 1, in <module>
    precoJogo1 = float(int(input()))
ValueError: invalid literal for int() with base 10: '142.35'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:20:26) 
-- CODE:
precoJogo1 = float(int(input('valor do jogo 1')))
precoJogo2 = float(int(input('valor do jogo 2')))
desconto25 = precoJogo2*25/100
TotalJogo2 = precoJogo2 - (precoJogo2*(desconto25 / 100))
Total = precoJogo1 + TotalJogo2
print(round(TotalJogo2,2))
print(Total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    precoJogo1 = float(int(input()))
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:20:29) 
-- CODE:
precoJogo1 = float(int(input('valor do jogo 1')))
precoJogo2 = float(int(input('valor do jogo 2')))
desconto25 = precoJogo2*25/100
TotalJogo2 = precoJogo2 - (precoJogo2*(desconto25 / 100))
Total = precoJogo1 + TotalJogo2
print(round(TotalJogo2,2))
print(Total)

-- EXECUTION TIME:
0.146011
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2921/main.py", line 1, in <module>
    precoJogo1 = float(int(input()))
ValueError: invalid literal for int() with base 10: '142.35'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:23:56) 
-- CODE:
precoJogo1 = float(int(input('valor do jogo 1')))
precoJogo2 = float(int(input('valor do jogo 2')))
desconto25 = precoJogo2*25/100
TotalJogo2 = precoJogo2 - (precoJogo2*(desconto25 / 100))
Total = precoJogo1 + TotalJogo2
print(round(TotalJogo2,2))
print(Total)

-- EXECUTION TIME:
0.206238
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2921/main.py", line 1, in <module>
    precoJogo1 = float(int(input()))
ValueError: invalid literal for int() with base 10: '142.35'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:24:18) 
-- CODE:
precoJogo1 = float(input('valor do jogo 1'))
precoJogo2 = float(input('valor do jogo 2'))
desconto25 = precoJogo2*25/100
TotalJogo2 = precoJogo2 - (precoJogo2*(desconto25 / 100))
Total = precoJogo1 + TotalJogo2
print(round(TotalJogo2,2))
print(Total)

-- EXECUTION TIME:
0.137442
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
69.34
211.68609375
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
79.75
179.73549974999997
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
valor do jogo 1valor do jogo 267.44
169.55585775
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:25:46) 
-- CODE:
precoJogo2 = float(input('valor do jogo 2'))
precoJogo1 = precoJogo2*25/100
TotalJogo2 = precoJogo2 - (precoJogo2*(desconto25 / 100))
Total = precoJogo1 + TotalJogo2
print(round(TotalJogo2,2))
print(Total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    TotalJogo2 = precoJogo2 - (precoJogo2*(desconto25 / 100))
NameError: name 'desconto25' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:25:48) 
-- CODE:
precoJogo2 = float(input('valor do jogo 2'))
precoJogo1 = precoJogo2*25/100
TotalJogo2 = precoJogo2 - (precoJogo2*(desconto25 / 100))
Total = precoJogo1 + TotalJogo2
print(round(TotalJogo2,2))
print(Total)

-- EXECUTION TIME:
0.153323
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2921/main.py", line 3, in <module>
    TotalJogo2 = precoJogo2 - (precoJogo2*(desconto25 / 100))
NameError: name 'desconto25' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:26:14) 
-- CODE:
precoJogo2 = float(input('valor do jogo 2'))
precoJogo1 = precoJogo2*25/100
TotalJogo2 = precoJogo2 - (precoJogo2*(precoJogo1 / 100))
Total = precoJogo1 + TotalJogo2
print(round(TotalJogo2,2))
print(Total)

-- OUTPUT:
91.69
127.27869375
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:26:17) 
-- CODE:
precoJogo2 = float(input('valor do jogo 2'))
precoJogo1 = precoJogo2*25/100
TotalJogo2 = precoJogo2 - (precoJogo2*(precoJogo1 / 100))
Total = precoJogo1 + TotalJogo2
print(round(TotalJogo2,2))
print(Total)

-- EXECUTION TIME:
0.154233
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
91.69
127.27869375
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
74.99
99.99249975000001
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
76.05
101.578764
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:26:19) 
-- CODE:
precoJogo2 = float(input('valor do jogo 2'))
precoJogo1 = precoJogo2*25/100
TotalJogo2 = precoJogo2 - (precoJogo2*(precoJogo1 / 100))
Total = precoJogo1 + TotalJogo2
print(round(TotalJogo2,2))
print(Total)

-- EXECUTION TIME:
0.156639
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
91.69
127.27869375
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
74.99
99.99249975000001
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
76.05
101.578764
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:27:28) 
-- CODE:
precoJogo2 = float(input('valor do jogo 2'))
precoJogo1 = precoJogo2*25/100
TotalJogo2 = precoJogo2 - (precoJogo2*(precoJogo1 / 100))
total = precoJogo1 + TotalJogo2
round(TotalJogo2,2)
print(total + round)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(total + round)
TypeError: unsupported operand type(s) for +: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:27:31) 
-- CODE:
precoJogo2 = float(input('valor do jogo 2'))
precoJogo1 = precoJogo2*25/100
TotalJogo2 = precoJogo2 - (precoJogo2*(precoJogo1 / 100))
total = precoJogo1 + TotalJogo2
round(TotalJogo2,2)
print(total + round)

-- EXECUTION TIME:
0.144188
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2921/main.py", line 6, in <module>
    print(total + round)
TypeError: unsupported operand type(s) for +: 'float' and 'builtin_function_or_method'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:29:22) 
-- CODE:
jogo1 = float(input('valor 1'))
jogo2 = float(input('valor 2'))
desconto = (jogo1 + jogo2*25)/100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(total + round)
TypeError: unsupported operand type(s) for +: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:31:22) 
-- CODE:
jogo1 = float(input('valor 1'))
jogo2 = float(input('valor 2'))
desconto = (jogo2*25)/100
total = (jogo1 + jogo2* desconto)
print(total)
-- OUTPUT:
2133.740625
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:31:24) 
-- CODE:
jogo1 = float(input('valor 1'))
jogo2 = float(input('valor 2'))
desconto = (jogo2*25)/100
total = (jogo1 + jogo2* desconto)
print(total)
-- EXECUTION TIME:
0.20769
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
2133.740625
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
3124.4400249999994
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
1945.5342250000003
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:33:57) 
-- CODE:
jogo1 = float(input('valor 1'))
jogo2 = float(input('valor 2'))
desconto = jogo2*25/100
TotalJogo2 = jogo2 - desconto
total = (jogo1 + TotalJogo2)
print(total)
-- OUTPUT:
209.2875
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:34:00) 
-- CODE:
jogo1 = float(input('valor 1'))
jogo2 = float(input('valor 2'))
desconto = jogo2*25/100
TotalJogo2 = jogo2 - desconto
total = (jogo1 + TotalJogo2)
print(total)
-- EXECUTION TIME:
0.166774
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
209.2875
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
182.4825
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
166.5225
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:36:04) 
-- CODE:
jogo1 = float(input('valor 1'))
jogo2 = float(input('valor 2'))
desconto = jogo2*25/100
TotalJogo2 = jogo2 - (jogo2*(desconto/100))
total = (jogo1 + TotalJogo2)
print(total)
-- OUTPUT:
211.68609375
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:36:06) 
-- CODE:
jogo1 = float(input('valor 1'))
jogo2 = float(input('valor 2'))
desconto = jogo2*25/100
TotalJogo2 = jogo2 - (jogo2*(desconto/100))
total = (jogo1 + TotalJogo2)
print(total)
-- EXECUTION TIME:
0.160524
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
211.68609375
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
179.73549974999997
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
169.55585775
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:37:12) 
-- CODE:
jogo1 = float(input('valor 1'))
jogo2 = float(input('valor 2'))
desconto = jogo1 + ((jogo2*25)/100)
TotalJogo2 = jogo2 - (jogo2*(desconto/100))
total = (jogo1 + TotalJogo2)
print(total)
-- EXECUTION TIME:
0.222873
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
84.63871874999998
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
69.75649874999999
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
81.86541375
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:37:40) 
-- CODE:
jogo1 = float(input('valor 1'))
jogo2 = float(input('valor 2'))
desconto = jogo1 + ((jogo2*25)/100)
TotalJogo2 = jogo2 - (jogo2*(desconto/100))
total = (jogo1 + TotalJogo2)
print(round(total,2))
-- EXECUTION TIME:
0.19695
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
84.64
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
69.76
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
81.87
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:38:24) 
-- CODE:
jogo1 = float(input('valor 1'))
jogo2 = float(input('valor 2'))
desconto = (jogo2*25)/100
TotalJogo2 = jogo2 - (jogo2*(desconto/100))
total = (jogo1 + TotalJogo2)
print(round(total,2))
-- OUTPUT:
211.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:38:32) 
-- CODE:
jogo1 = float(input('valor 1'))
jogo2 = float(input('valor 2'))
desconto = (jogo2*25)/100
TotalJogo2 = jogo2 - (jogo2*(desconto/100))
total = (jogo1 + TotalJogo2)
print(round(total,2))
-- EXECUTION TIME:
0.130359
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
211.69
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
179.74
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
169.56
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:42:07) 
-- CODE:
jogo1 = float(input('valor 1'))
jogo2 = float(input('valor 2'))
desconto = 25
TotalJogo2 = jogo2 - (jogo2*(desconto/100))
total = (jogo1 + TotalJogo2)
print(round(total,2))
-- OUTPUT:
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:42:09) 
-- CODE:
jogo1 = float(input('valor 1'))
jogo2 = float(input('valor 2'))
desconto = 25
TotalJogo2 = jogo2 - (jogo2*(desconto/100))
total = (jogo1 + TotalJogo2)
print(round(total,2))
-- EXECUTION TIME:
0.145997
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
209.29
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
182.48
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
166.52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:42:13) 
-- CODE:
jogo1 = float(input('valor 1'))
jogo2 = float(input('valor 2'))
desconto = 25
TotalJogo2 = jogo2 - (jogo2*(desconto/100))
total = (jogo1 + TotalJogo2)
print(round(total,2))
-- OUTPUT:
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:42:55) 
-- CODE:
jogo1 = float(input('valor 1'))
jogo2 = float(input('valor 2'))
desconto = 25
TotalJogo2 = jogo2 - (jogo2*(desconto/100))
total = (jogo1 + TotalJogo2)
print(round(total,2))
-- OUTPUT:
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:44:55) 
-- CODE:
jogo1 = float(input('valor 1'))
jogo2 = float(input('valor 2'))
desconto = 25
TotalJogo2 = jogo2 - (jogo2*(desconto/100))
total = (jogo1 + TotalJogo2)
print(TotalJogo2)
print(round(total,2))
-- OUTPUT:
66.9375
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:45:13) 
-- CODE:
jogo1 = float(input('valor 1'))
jogo2 = float(input('valor 2'))
desconto = 25
TotalJogo2 = jogo2 - (jogo2*(desconto/100))
total = (jogo1 + TotalJogo2)
print(TotalJogo2)
print(round(total,2))
-- EXECUTION TIME:
0.212805
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.9375
209.29
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49249999999999
182.48
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4025
166.52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:46:08) 
-- CODE:
jogo1 = float(input('valor 1'))
jogo2 = float(input('valor 2'))
desconto = 25
TotalJogo2 = jogo2 - (jogo2*(desconto/100))
total = (jogo1 + TotalJogo2)
print(float(TotalJogo2))
print(float(round(total,2))
-- ERROR:
File "XXXX", line 8
    
                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:46:58) 
-- CODE:
jogo1 = float(input('valor 1'))
jogo2 = float(input('valor 2'))
desconto = 25
TotalJogo2 = jogo2 - (jogo2*(desconto/100))
total = (jogo1 + TotalJogo2)
print(TotalJogo2)
print(round(total,2))
-- OUTPUT:
66.9375
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:47:13) 
-- CODE:
jogo1 = float(input('valor 1'))
jogo2 = float(input('valor 2'))
desconto = 25
TotalJogo2 = jogo2 - (jogo2*(desconto/100))
total = (jogo1 + TotalJogo2)
print(TotalJogo2)
print(round(total,2))
-- EXECUTION TIME:
0.136753
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.9375
209.29
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49249999999999
182.48
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4025
166.52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:48:15) 
-- CODE:
jogo1 = float(input('valor 1'))
jogo2 = float(input('valor 2'))
desconto = 25
TotalJogo2 = jogo2 - (jogo2*(desconto/100))
total = (jogo1 + TotalJogo2)
print(round(TotalJogo2))
print(round(total,2))
-- OUTPUT:
67
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:48:27) 
-- CODE:
jogo1 = float(input('valor 1'))
jogo2 = float(input('valor 2'))
desconto = 25
TotalJogo2 = jogo2 - (jogo2*(desconto/100))
total = (jogo1 + TotalJogo2)
print(round(TotalJogo2))
print(round(total,2))
-- EXECUTION TIME:
0.139783
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
67
209.29
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82
182.48
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64
166.52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:49:05) 
-- CODE:
jogo1 = float(input('valor 1'))
jogo2 = float(input('valor 2'))
desconto = 25
TotalJogo2 = jogo2 - (jogo2*(desconto/100))
total = (jogo1 + TotalJogo2)
print(round(TotalJogo2))
print(round(total,2))
-- OUTPUT:
67
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:49:14) 
-- CODE:
jogo1 = float(input('valor 1'))
jogo2 = float(input('valor 2'))
desconto = 25
TotalJogo2 = jogo2 - (jogo2*(desconto/100))
total = (jogo1 + TotalJogo2)
print(round(TotalJogo2))
print(round(total,2))
-- EXECUTION TIME:
0.188486
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
67
209.29
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82
182.48
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64
166.52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:49:21) 
-- CODE:
jogo1 = float(input('valor 1'))
jogo2 = float(input('valor 2'))
desconto = 25
TotalJogo2 = jogo2 - (jogo2*(desconto/100))
total = (jogo1 + TotalJogo2)
print(round(TotalJogo2))
print(round(total,2))
-- OUTPUT:
67
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:49:47) 
-- CODE:
jogo1 = float(input('valor 1'))
jogo2 = float(input('valor 2'))
desconto = 25
TotalJogo2 = jogo2 - (jogo2*(desconto/100))
total = (jogo1 + TotalJogo2)
print(TotalJogo2)
print(round(total,2))
-- OUTPUT:
66.9375
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 17:49:57) 
-- CODE:
jogo1 = float(input('valor 1'))
jogo2 = float(input('valor 2'))
desconto = 25
TotalJogo2 = jogo2 - (jogo2*(desconto/100))
total = (jogo1 + TotalJogo2)
print(TotalJogo2)
print(round(total,2))
-- EXECUTION TIME:
0.193539
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.9375
209.29
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49249999999999
182.48
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4025
166.52
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:50:57) 
-- CODE:
jogo1 = float(input('valor 1'))
jogo2 = float(input('valor 2'))
desconto = 25
TotalJogo2 = jogo2 - (jogo2*(desconto/100))
total = (jogo1 + TotalJogo2)
print(TotalJogo2)
print(round(total,2))
-- OUTPUT:
66.9375
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:53:49) 
-- CODE:
jogo1 = int(input('valor 1'))
jogo2 = int(input('valor 2'))
desconto = 25
TotalJogo2 = jogo2 - (jogo2*(desconto/100))
total = (jogo1 + TotalJogo2)
print(TotalJogo2)
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    jogo1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 17:53:57) 
-- CODE:
jogo1 = int(input('valor 1'))
jogo2 = int(input('valor 2'))
desconto = 25
TotalJogo2 = jogo2 - (jogo2*(desconto/100))
total = (jogo1 + TotalJogo2)
print(TotalJogo2)
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    jogo1 = int(input())
ValueError: invalid literal for int() with base 10: '142.35'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:16:10) 
-- CODE:
jogo1 = float(input('valor 1'))
jogo2 = float(input('valor 2'))
desconto = 25
TotalJogo2 = jogo2 - (jogo2*(desconto/100))
total = (jogo1 + TotalJogo2)
print(round(TotalJogo2,2))
print(round(total,2))
-- OUTPUT:
66.94
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 21:16:57) 
-- CODE:
jogo1 = float(input('valor 1'))
jogo2 = float(input('valor 2'))
desconto = 25
TotalJogo2 = jogo2 - (jogo2*(desconto/100))
total = (jogo1 + TotalJogo2)
print(round(TotalJogo2,2))
print(round(total,2))
-- OUTPUT:
66.94
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
